funciones de issues en api implementadas
